2013-10-08  Anthony Green  <green@moxielogic.com>

	* aclocal.m4, compile, config.guess, config.sub, depcomp,
	install-sh, mdate-sh, missing, texinfo.tex: Update from upstream.
	* configure.ac: Update version to 3.0.14-rc0.
	* Makefile.in, configure, Makefile.in, include/Makefile.in,
	man/Makefile.in, testsuite/Makefile.in: Rebuilt.

2013-07-15  Miod Vallat  <miod@openbsd.org>

	* Makefile.am,
	configure.ac,
	src/m88k/ffi.c,
	src/m88k/ffitarget.h,
	src/m88k/obsd.S,
	src/vax/elfbsd.S,
	src/vax/ffi.c,
	src/vax/ffitarget.h: Add m88k and vax support.

2013-06-24 Alan Modra  <amodra@gmail.com>

	* src/powerpc/ffi.c (ffi_prep_args_SYSV): Move var declaration
	before statements.
	(ffi_prep_args64): Support little-endian.
	(ffi_closure_helper_SYSV, ffi_closure_helper_LINUX64): Likewise.
	* src/powerpc/linux64_closure.S (ffi_closure_LINUX64): Likewise.
	* src/powerpc/ppc_closure.S (ffi_closure_SYSV): Likewise.

2013-06-12  Mischa Jonker  <mjonker@synopsys.com>

	 * configure.ac: Add support for ARC.
	 * Makefile.am: Likewise.
	 * README: Add ARC details.
	 * src/arc/arcompact.S: New.
	 * src/arc/ffi.c: Likewise.
	 * src/arc/ffitarget.h: Likewise.

2013-03-28  David Schneider  <david.schneider@bivab.de>

	 * src/arm/ffi.c: Fix support for ARM hard-float calling convention.
	 * src/arm/sysv.S: call different methods for SYSV and VFP ABIs.
	 * testsuite/libffi.call/cls_many_mixed_args.c: testcase for a closure with
	 mixed arguments, many doubles.
	 * testsuite/libffi.call/many_double.c: testcase for calling a function using
	 more than 8 doubles.
	 * testcase/libffi.call/many.c: use absolute value to check result against an
	 epsilon

2013-03-17  Anthony Green  <green@moxielogic.com>

	* README: Update for 3.0.13.
	* configure.ac: Ditto.
	* configure: Rebuilt.
	* doc/*: Update version.

2013-03-17  Dave Korn  <dave.korn.cygwin@gmail.com>

	* src/closures.c (is_emutramp_enabled
	[!FFI_MMAP_EXEC_EMUTRAMP_PAX]): Move default definition outside
	enclosing #if scope.
