@@ -134,7 +134,7 @@ ffi_call_SYSV:
 	rsubi r11, r23, 8
 	beqi r11, ffi_call_SYSV_store64
 
-	/* Didnt match anything */
+	/* Didn't match anything */
 	bri ffi_call_SYSV_end
 
 ffi_call_SYSV_store64:
@@ -210,7 +210,7 @@ ffi_closure_SYSV:
 	addik r7, r12, 0 /* closure object */
 	addik r1, r1, -8 /* allocate return value */
 	addik r8, r1, 0 /* void* rvalue */
-	addik r1, r1, -8 /* allocate for reutrn type/size values */
+	addik r1, r1, -8 /* allocate for return type/size values */
 	addik r9, r1, 0 /* void* rtype */
 	addik r10, r1, 4 /* void* rsize */
 
@@ -247,7 +247,7 @@ ffi_closure_SYSV_prepare_return:
 	rsubi r11, r10, 8
 	beqi r11, ffi_closure_SYSV_store64
 
-	/* Didnt match anything */
+	/* Didn't match anything */
 	bri ffi_closure_SYSV_end
 
 ffi_closure_SYSV_store64:
